--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "email": "hoaa20092013@gmail.com",
-  "password": "Sangphe410!@"
+  "email": "vuphung69@gmail.com",
+  "password": "Hihihaha123@"
 }
